--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "mydiary.bloomydev.ilasisi.mydiary"
-        minSdkVersion 15
+        applicationId "com.friendlyconnect.android"
+        minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -26,4 +26,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.google.firebase:firebase-auth:11.0.2'
+    implementation 'com.google.android.gms:play-services-auth:11.0.2'
+    implementation 'com.google.firebase:firebase-storage:11.0.2'
 }
+apply plugin: 'com.google.gms.google-services'
